Dafny: * First crack at a compiler (/compile:1 writes out.cs, if Dafny program verifies) * Added "print" statement (to make running compiled programs more interesting) * Changed name of default class from $default to _default Boogie: * Included "lambda" as a keyword in emacs and latex style files

--- a/Util/latex/boogie.sty
+++ b/Util/latex/boogie.sty
@@ -53,6 +53,7 @@
     {<==>}{$\Longleftrightarrow$}4 
     {forall}{$\forall$}1
     {exists}{$\exists$}1
+    {lambda}{$\lambda$}1
     % the following isn't actually Boogie, but it gives the option to produce nicer latex
     {<<}{$\langle$}1
     {>>}{$\rangle$}1
