--- a/Util/latex/boogie.sty
+++ b/Util/latex/boogie.sty
@@ -34,7 +34,7 @@
       procedure,implementation,
       requires,modifies,ensures,free,
       % expressions
-      false,true,null,old,
+      false,true,null,old,then,
       % statements
       assert,assume,havoc,call,if,else,while,invariant,break,return,goto,
       },
