Chalice: * renamed keyword "maxlock" to "waitlevel" * added -vs switch, for I/O suitable for VS integration

--- a/Util/latex/chalice.sty
+++ b/Util/latex/chalice.sty
@@ -22,7 +22,7 @@
     if,in,int,invariant,ite,%
     join,%
     lock,lockbottom,lockchange,%
-    maxlock,method,module,%
+    method,module,%
     new,nil,null,%
     old,%
     predicate,%
@@ -31,7 +31,7 @@
     this,token,true,%
     unfold,unfolding,unshare,%
     var,%
-    while},
+    waitlevel,while},
   literate=%
     {=}{{=~}}1%
     {+=}{{+}{=}~}3%
