Chalice:  Introduced '[[ S ]]' as a shorthand syntax for 'lock (this) { S }'.  Think of the new brackets as atomicity brackets (see PetersonsAlgorithm.chalice) Chalice:  Added Peterson's algorithm to test suite (safety properties only) VS 2010 integration: Updated Chalice and Dafny modes, added keyword highlighting for a new Boogie mode

--- a/Util/VS2010/Boogie/BoogieLanguageService/Resources.resx
+++ b/Util/VS2010/Boogie/BoogieLanguageService/Resources.resx
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
+    VS SDK Notes: This resx file contains the resources that will be consumed directly by your package.
+    For example, if you chose to create a tool window, there is a resource with ID 'CanNotCreateWindow'. This
+    is used in VsPkg.cs to determine the string to show the user if there is an error when attempting to create
+    the tool window.
+
+    Resources that are accessed directly from your package *by Visual Studio* are stored in the VSPackage.resx 
+    file.
+-->
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,13 +126,5 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="104" xml:space="preserve">
-    <value>Paste PLK Here</value>
-  </data>
-  <data name="110" xml:space="preserve">
-    <value>Chalice</value>
-  </data>
-  <data name="112" xml:space="preserve">
-    <value>Chalice Programming Language</value>
-  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 </root>
