Chalice: added string type and string literals (but no other string operations)

--- a/Util/latex/chalice.sty
+++ b/Util/latex/chalice.sty
@@ -27,7 +27,7 @@
     old,%
     predicate,%
     rd,reorder,release,requires,result,returns,%
-    seq,share,%
+    seq,share,string,%
     this,token,true,%
     unfold,unfolding,unshare,%
     var,%
