Boogie: new syntax for integer division and modulus: use div and mod instead of / and %

--- a/Util/latex/boogie.sty
+++ b/Util/latex/boogie.sty
@@ -34,7 +34,7 @@
       procedure,implementation,
       requires,modifies,ensures,free,
       % expressions
-      false,true,null,old,then,
+      false,true,null,old,then,div,mod,
       % statements
       assert,assume,havoc,call,if,else,while,invariant,break,return,goto,
       },
