Boogie: updated syntax highlighting ("real")

--- a/Util/latex/boogie.sty
+++ b/Util/latex/boogie.sty
@@ -19,7 +19,7 @@
 \usepackage{listings}
 
 \lstdefinelanguage{boogie}{
-  morekeywords={type,finite,bool,int,ref,%
+  morekeywords={type,bool,int,real,%
       bv0,bv1,bv2,bv3,bv4,bv5,bv6,bv7,bv8,bv9,%
       bv10,bv11,bv12,bv13,bv14,bv15,bv16,bv17,bv18,bv19,%
       bv20,bv21,bv22,bv23,bv24,bv25,bv26,bv27,bv28,bv29,%
